welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: ')' expected but integer literal found.
      if (die 1 == 6)
              ^withoutDoubles:11: error: illegal start of simple expression
    }
    ^